--- a/src/main/resources/static/style-sobremi.css
+++ b/src/main/resources/static/style-sobremi.css
@@ -3,9 +3,10 @@
     --background-color: #101010;
     --text-color: #ffffff;
     --primary-color: #e93535;
-    --secundary-background-color: #1f1f1f;
+    --secundary-background-color: #252525;
     --transition: all 0.3s ease;
     --color-fondo-boton: #e4e4e4;
+
 }
 
 
@@ -34,15 +35,15 @@ header{
 }
 span{
     color: var(--primary-color);
-} 
+}
 p{
     text-align: justify;
     font-size: 15px;
-    color: var();
+    font-weight: 500;
 }
 h1{
     font-weight: 0.625rem;
-    font-size: 60px;
+    font-size: 65px;
 }
 h2{
     font-weight: 0.625rem;
@@ -50,13 +51,56 @@ h2{
 }
 h3{
     font-weight: 0.625rem;
-    font-size: 30px;
+    font-size: 35px;
 }
 h4{
     font-weight: 0.625rem;
-    font-size: 20px;
-}   
-/*------------------------------*/
+    font-size: 18px;
+}
+h5{
+    font-weight: 0.625rem;
+    font-size: 16px;
+}
+
+/*------foto-perfil------*/
+.foto{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+
+}
+
+.foto-sobremi img{
+    opacity: 0;
+    transform: translateX(6rem);
+    transition: all 2s ease;
+}
+.mifoto{
+    padding: 1.5rem;
+    background-color: var(--primary-color);
+    width: 85%;
+}
+.mifoto.visible {
+    opacity: 1;
+    transform: translateX(0);
+
+}
+.foto img{
+    border-radius: 100%;
+    margin: 4rem auto;
+    min-width: 6rem;
+    max-width: 35rem;
+
+}
+.foto img:hover{
+    transform: scale(1.04);
+}
+/*----------fin foto-perfil------*/
+
+/*----------redes sociales-------*/
 .redes a{
     background-color: transparent;
     display: inline-flex;
@@ -74,7 +118,10 @@ h4{
     box-shadow: 0 0 1.56rem var(--primary-color);
     transform: scale(1.3);
 }
-/*------------------------------*/
+
+/*----------fin redes sociales-------*/
+
+/*----------Inicio botones-------*/
 .btns{
     display: inline-flex;
     flex-wrap: wrap;
@@ -111,6 +158,7 @@ h4{
     background-color: var(--primary-color);
     color: var(--background-color);
 }
+/*-------------------fin-botones------------------*/
 /*-------------boton-colores-----------------*/
 .container-color-botones{
     display: flex;
@@ -140,11 +188,11 @@ h4{
 }
 .boton-personalizacion-color:active{
     transform: scale(0.95);
-    
+
 }
 .circulo-color{
     border: 2px solid transparent;
-    
+
     width: 2rem;
     height: 2rem;
     cursor: pointer;
@@ -153,10 +201,10 @@ h4{
     position: relative;
 }
 .circulo-color:nth-child(1) { background-color: #e93535; }
-  .circulo-color:nth-child(2) { background-color: #00cc00; }
-  .circulo-color:nth-child(3) { background-color: #ff5e00; }
-  .circulo-color:nth-child(4) { background-color: #23a7ff; }
-  .circulo-color:nth-child(5) { background-color: #9333d3; }
+.circulo-color:nth-child(2) { background-color: #00cc00; }
+.circulo-color:nth-child(3) { background-color: #ff5e00; }
+.circulo-color:nth-child(4) { background-color: #23a7ff; }
+.circulo-color:nth-child(5) { background-color: #9900ff; }
 
 .menu-desplegable-colores{
     display: none;
@@ -164,13 +212,13 @@ h4{
     background-color:var(--color-fondo-boton);
     border-radius: 50px;
     padding: 0.25rem;
-}  
+}
 .menu-desplegable-colores.show {
-    display: flex; 
+    display: flex;
     flex-direction: row;
     gap: 0.4rem;
 
-    
+
 }
 /*-------------boton-dia-noche-----------------*/
 #color-toggle-btn {
@@ -222,7 +270,7 @@ h4{
 }
 .logo:hover{
     transform: scale(1.1);
-    
+
 }
 .navbar{
     display: flex;
@@ -246,7 +294,7 @@ h4{
     border-bottom: 0.19rem solid var(--primary-color);
     text-shadow: 0 0 0.63rem var(--primary-color);
     transform: scale(1.2);
-    
+
 }
 .btn-menu{
     display: none;
@@ -263,153 +311,143 @@ h4{
 /*------------------------------*/
 /*--------fin Header---------*/
 /*------------------------------*/
-/*---------------------------------------*/
-/*----------Inicio Main----------*/
-.contacto{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-    padding-top:7rem;
-    margin-bottom: 7rem;
-    
 
-}   
-.container-informacion{
-    width: 45%;
-    height: 100%;
+/*------------------------------*/
+/*-------inicio Main-------*/
+/*------------------------------*/
+
+.sobremi{
+
+    box-sizing: border-box;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    gap: 40px;
-    padding: 2rem 0;
 }
-.informacion{
-    display: flex;
-    
-    
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    width: 80%;
-    gap: 0.6rem;
-    
-}
-
-.simbolo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    background-color: var(--secundary-background-color);
-    color: var(--primary-color);
-    font-size: 1.5rem;
-    width: 3.5rem;
-    height: 3.5rem;
-}
-.bloques-info{
+.descripcion-sobremi{
+    box-sizing: border-box;
+    color: var(--text-color);
+    font-family:Arial, Helvetica, sans-serif;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    padding: 20px 0;
-    gap: 0.5rem;
-}
-.texto-info{
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 20px;
+    justify-content: center;
+}
+.texto-sobremi{
+    max-width: 75%;
+}
+.btn-principal{
+    margin: 1.25rem 1.25rem 0 0;
+    font-weight: 640;
+    font-size: 18px;
+    height: 3.43rem;
+    width: 10.6rem;
 }
 .texto-ascendente-principal {
     opacity: 0;
     transform: translateY(-40px);
-    transition: opacity 1.4s ease, transform 1.4s;
+    transition: opacity 1.2s ease, transform 1.2s;
 }
 
 .texto-ascendente-principal.visible {
     opacity: 1;
     transform: translateY(0);
 }
-/*------------formulario-----------------*/
-
-.fondo-formulario{
-    background-color: var(--secundary-background-color);
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
-    width: 90%;
-    gap: 0.9rem;
-}
-.fondo-formulario h3{
-    text-align: center;
-}
-.container-formulario{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    width: 55%;
-}
-.container-formulario form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+/*----------------------------------------------------------------*/
+.mostrar-habilidades {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
     width: 100%;
-}
-
-.input-grupo{
     display: flex;
-    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.container-habilidades {
+    width: 95%;
+    display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    min-width:260px;
-    
-    width: 100%;
+    gap: 25px;
 }
-.input-grupo-2{
+
+.porque-contratarme{
+    display: flex;
+    min-width: 280px;
+    justify-content: center;
+    width: 30%;
+}
+.texto-porque-contratarme{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    width: 100%;
+    gap: 20px;
+    width: 85%;
+    min-width: 280px;
 }
-.input-caja{
+.texto-porque-contratarme h2{
+    font-size: 2.5rem ;
+}
+.contratarme-btns{
+    gap: 15px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
 }
-.input-grupo-2 textarea, .input-caja input{
+.btn-porque-contratarme{
+    border: 2px solid transparent;
     color: var(--text-color);
+    background-color: var(--secundary-background-color);
     width: 100%;
-    margin: 12px;
-    padding: 13px;
-    font-size: 0.9rem;
-    border-radius: 0.5rem;
-    background-color: var(--background-color);
-    border: 2px solid var(--third-color);
-    resize: none;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    transition: var(--transition);
+    cursor: pointer;
 }
-.input-grupo-2 textarea, .input-caja input:focus{
-    border-color: var(--third-color);
-    outline: none;
+
+
+.pantalla-cambiante{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-.btn-enviar{
-    margin: 1.25rem 1.25rem 0 0;
-    font-weight: 640;
-    font-size: 16px;
-    height: 3rem;
-    width: 10.6rem;
+
+
+#filtro-seccion .active{
+    color: var(--text-color);
+    transform: scale(1.03);
+    border: 2px solid var(--primary-color);
+}
+.info-educacion{
+    display: grid;
+    max-height: 40rem;
+    overflow: auto;
+    grid-template-columns: repeat(2, 1fr);
+}
+.info-educacion::-webkit-scrollbar {
+    width: 0.7rem;
+}
+.info-educacion::-webkit-scrollbar-thumb {
+    background-color:#b41616;
+    border-radius: 10px;
+}
+.info-experiencia{
+    display: grid;
+    max-height: 40rem;
+    overflow: auto;
+    grid-template-columns: repeat(2, 1fr);
+
+
+}
+.info-experiencia::-webkit-scrollbar {
+    width: 0.7rem;
+}
+.info-experiencia::-webkit-scrollbar-thumb {
+    background-color:#b41616;
+    border-radius: 10px;
 }
 .texto-ascendente-sobremi {
     opacity: 0;
@@ -422,9 +460,194 @@ h4{
     transform: translateY(0);
 }
 
+.targeta-ascendente1 {
+    opacity: 0;
+    transform: translateY(-40px);
+    transition: opacity 1s ease, transform 1s;
+}
+.texto-ascendente-contacto {
+    opacity: 0;
+    transform: translateY(-40px);
+    transition: opacity 1s ease, transform 1s;
+}
+
+.texto-ascendente-contacto.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.targeta-ascendente1.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.targeta-ascendente2 {
+    opacity: 0;
+    transform: translateY(-40px);
+    transition: opacity 1s ease, transform 1s;
+}
+.targeta-ascendente2.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.conGeneral{
+    display: grid;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.timeline-item {
+    background-color:var(--secundary-background-color);
+    padding: 35px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.fa-circle{
+    font-size: 14px;
+    padding-right: 5px;
+}
+.fecha-educacion{
+    color: var(--primary-color);
+}
+@media (max-width: 1100px) {
+    .conGeneral{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
+
+@media (max-width: 700px) {
+    .container-habilidades{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .porque-contratarme{
+        width: 100%;
+        justify-content: center;
+    }
+    .texto-porque-contratarme{
+        width: 95%;
+
+    }.pantalla-cambiante{
+         width: 95%;
+     }
+
+}
+
+/*---------------------------------------------------*/
+.container-targetas{
+    width: 100%;
+    margin-bottom: 40px ;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+
+}
+
+.container-targetas h3{
+    margin-bottom: 15px;
+}
+
+.targetas-servicios{
+    display: grid;
+    max-height: 40rem;
+    overflow: auto;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    transition: all 0.5s ease;
+}
+.targetas-servicios::-webkit-scrollbar {
+    width: 0.7rem;
+}
+.targetas-servicios::-webkit-scrollbar-thumb {
+    background-color:var(--secundary-background-color);
+    border-radius: 10px;
+}
+.titulo-targeta{
+    font-size: 30px;
+    text-align: left;
+}
+.texto-ascendente-extra.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.texto-ascendente-extra {
+    opacity: 0;
+    transform: translateY(-40px);
+    transition: opacity 1s ease, transform 1s;
+}
+
+.targeta-servicio i{
+    display: flex;
+    justify-content: left;
+
+    font-size: 45px;
+}
+.targeta-servicio ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.targeta-servicio ul li{
+    font-size: 14px;
+    background-color: #101010;
+    border-radius: 5px;
+    padding: 5px 12px;
+    color: #ffffff;
+}
+.container-tabla{
+    width: 75%;
+}
+.celdas-tabla tr td{
+    padding: 10px 0px;
+    border-bottom: 1px solid rgba(145, 145, 145, 0.404);
+}
+.btn-sobremi-descripcion{
+    display: inline-flex;
+    flex-wrap: wrap;
+    color: var(--background-color);
+    font-weight: 40px;
+    margin: 40px;
+}
+.targeta-servicio{
+    color: #101010;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    border-radius: 20px;
+    gap: 5px;
+
+    border: 2px solid var(--primary-color);
+
+}
+
+
+.targeta-ascendente3.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.targeta-ascendente3 {
+    opacity: 0;
+    transform: translateY(-40px);
+    transition: opacity 1s ease, transform 1s;
+}
+
+.mostrar{
+    display: none;
+}
+.mostrar.active{
+    display: block;
+}
+
+
+
+
 /*---------------------------------*/
 /*-----------final Main----------*/
 /*---------------------------------*/
+
 
 /*---------------------------------*/
 /*-------inicio footer-------*/
@@ -468,15 +691,15 @@ h4{
     flex-direction: row;
     justify-content: space-between;
     align-items:start;
-    
+
 }
 .footer-menu{
     padding: 2.5rem ;
-    
+
 }
 .footer-contacto{
     padding: 2.5rem;
-    
+
 }
 .redes-footer{
     padding: 2.5rem;
@@ -484,7 +707,7 @@ h4{
 .lista {
     display: flex;
     flex-direction: column;
-    
+
 }
 .lista li{
     display: inline-block;
@@ -524,7 +747,7 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     background-color: var(--background-color);
 }
 .copyright{
@@ -538,78 +761,38 @@ h4{
 /*-------final footer-------*/
 
 
+
+
 /*-------responsive--------*/
 
-@media (max-width: 346px){
-    .logo{
-        font-size: 20px;
-    }
-}
-@media (max-width: 910px){
-    .proyectos-targeta{
-        flex-wrap:wrap;
-    }
-    .reverse{
-        flex-wrap:wrap-reverse;
-    }
-}
-@media (max-width: 450px) {
-    .titulo-proyectos, .container-targetas h1, .container-formulario h1, .texto-contacto, .texto-descripcion h1,.texto-sobremi h1, .texto-proyectos{
-        font-size: 45px;
-    }
-    .btns-targeta{
-        flex-wrap: wrap;
-    }
-    .input-grupo{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 0;
-    }
-}
-
 @media (max-width: 1300px) {
-    .targetas{
+    .targetas-servicios{
         grid-template-columns: repeat(2, 1fr);
     }
 }
-
 @media(max-width:1070px){
-    
+
     .descripcion-sobremi, .foto, .descripcion{
         width: 100%;
     }
-    .targetas {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
 
+}
 @media (max-width: 1000px) {
     .texto-footer{
         flex-direction: column;
         justify-content: center;
-        width: 40%;
     }
     .container-mapa{
         width: 60%;
     }
-    
+    .texto-footer{
+        width: 40%;
+    }
 }
-@media (max-width: 1000px) {
-    .contacto{
-        flex-direction: column;
-        gap: 2.5rem;
+@media(max-width:900px){
+    .targetas-servicios{
+        grid-template-columns: repeat(1, 1fr);
     }
-    .container-informacion{
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-    .container-formulario{
-        width: 100%;
-        align-items: center;
-    }
-    
 }
 @media(max-width:800px){
     .navbar{
@@ -622,9 +805,9 @@ h4{
         border-left: 2px solid var(--primary-color);
         border-bottom: 2px solid var(--primary-color);
         border-right: 2px solid var(--primary-color);
-         border-bottom-left-radius: 2rem;
-         border-bottom-right-radius: 2rem;
-         display: none;
+        border-bottom-left-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+        display: none;
     }
     .navbar ul{
         width: 100%;
@@ -640,59 +823,69 @@ h4{
     }
 
     .navbar.show {
-      display: flex;
-      max-height: 500px; 
+        display: flex;
+        max-height: 500px;
+    }
+    .targetas-sobremi{
+        grid-template-columns: repeat(1, 1fr);
     }
     .navbar ul li a:hover{
-    color: var(--primary-color);
-    border-bottom: 0.19rem solid var(--primary-color);
-    text-shadow: 0 0 0.63rem var(--primary-color);
-    transform: scale(1.08);
-    }
-}
-@media (max-width: 1200px) {
-    .targetas-sobremi{
-        grid-template-columns: repeat(2, 1fr);
+        color: var(--primary-color);
+        border-bottom: 0.19rem solid var(--primary-color);
+        text-shadow: 0 0 0.63rem var(--primary-color);
+        transform: scale(1.08);
     }
 }
 
+@media (max-width: 750px){
+    .targeta-sobremi{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
 @media (max-width: 630px) {
-     .container-mapa{
+    .container-mapa{
         width: 100%;
         border: none;
-     }
-     .texto-footer{
+    }
+    .texto-footer{
         width: 100%;
-     }
-     .footer-superior{
+    }
+    .footer-superior{
         flex-direction: column;
-     }
-     .container-mapa{
+    }
+    .container-mapa{
         width: auto;
     }
     .texto-footer{
         width: auto;
     }
+
 }
 
-@media(max-width:800px){
-    
-    .targetas-sobremi {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
 @media(max-width:476px){
     .celdas-tabla tr td{
         display: flex;
-    } 
+    }
     .btn-sobremi-descripcion{
         display: flex;
         align-items: center;
         justify-content: center;
     }
 }
-@media (max-width:613px) {
-    .proyectos-targetas img{
-        width: 100%;
+
+@media (max-width: 450px) {
+    .titulo-proyectos, .container-targetas h1, .container-formulario h1, .texto-contacto, .texto-descripcion h1,.texto-sobremi h1, .texto-proyectos{
+        font-size: 45px;
+    }
+    .btns-targeta{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 346px){
+    .logo{
+        font-size: 20px;
     }
 }
