--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,7 +87,7 @@
                     <br>
                     <h3 class="texto-animado texto-ascendente-principal">Soy <span></span></h3>
                     <br>
-                    <p class="texto-ascendente-principal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias sit ut culpa voluptatum minima officiis quo eaque, nemo itaque doloremque sunt perspiciatis vitae quasi natus odio id eum tempora veniam?</p>
+                    <p class="texto-ascendente-principal"> Polleria Francis </p>
                     <div class="redes principal-redes texto-ascendente-principal">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
