--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org">
+
 
 <head>
   <meta charset="UTF-8">
@@ -83,8 +84,7 @@
 </main>
 
 
-
-<a href="index.html"> Volver a la pagina principal</a>
-<script src="script.js"></script>
+<a href="/index">Volver a la pagina principal</a>
+<script src="/script.js"></script>
 </body>
 </html>
