AUN NO FUNCIONA EL DESPUES DE LOGIN Add login functionality and update security config
Introduced Login entity and LoginController for handling authentication. Updated SecurityConfig to use custom login page and adjusted user roles. Removed Usuario entity and moved UsuarioController to a new package. Added login page template and associated CSS. Updated HTML templates to include Thymeleaf namespace where needed.

--- a/src/main/resources/templates/proyectos.html
+++ b/src/main/resources/templates/proyectos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
+
 <!--
  Esta sección del código corresponde al encabezado (<head>) del documento HTML.
 - Define la codificación de caracteres como UTF-8.
