--- a/src/main/resources/static/style-sobremi.css
+++ b/src/main/resources/static/style-sobremi.css
@@ -35,7 +35,7 @@ header{
 }
 span{
     color: var(--primary-color);
-}
+} 
 p{
     text-align: justify;
     font-size: 15px;
@@ -61,7 +61,17 @@ h5{
     font-weight: 0.625rem;
     font-size: 16px;
 }
-
+tr{
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+}
+td{
+    width: 100%;
+}
+.fila{
+    color: var(--text-color);
+}
 /*------foto-perfil------*/
 .foto{
     width: 50%;
@@ -70,7 +80,7 @@ h5{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-
+    
 }
 
 .foto-sobremi img{
@@ -86,14 +96,14 @@ h5{
 .mifoto.visible {
     opacity: 1;
     transform: translateX(0);
-
+    
 }
 .foto img{
     border-radius: 100%;
     margin: 4rem auto;
     min-width: 6rem;
     max-width: 35rem;
-
+    
 }
 .foto img:hover{
     transform: scale(1.04);
@@ -188,11 +198,11 @@ h5{
 }
 .boton-personalizacion-color:active{
     transform: scale(0.95);
-
+    
 }
 .circulo-color{
     border: 2px solid transparent;
-
+    
     width: 2rem;
     height: 2rem;
     cursor: pointer;
@@ -201,10 +211,10 @@ h5{
     position: relative;
 }
 .circulo-color:nth-child(1) { background-color: #e93535; }
-.circulo-color:nth-child(2) { background-color: #00cc00; }
-.circulo-color:nth-child(3) { background-color: #ff5e00; }
-.circulo-color:nth-child(4) { background-color: #23a7ff; }
-.circulo-color:nth-child(5) { background-color: #9900ff; }
+  .circulo-color:nth-child(2) { background-color: #00cc00; }
+  .circulo-color:nth-child(3) { background-color: #ff5e00; }
+  .circulo-color:nth-child(4) { background-color: #23a7ff; }
+  .circulo-color:nth-child(5) { background-color: #9900ff; }
 
 .menu-desplegable-colores{
     display: none;
@@ -212,13 +222,13 @@ h5{
     background-color:var(--color-fondo-boton);
     border-radius: 50px;
     padding: 0.25rem;
-}
+}  
 .menu-desplegable-colores.show {
-    display: flex;
+    display: flex; 
     flex-direction: row;
     gap: 0.4rem;
 
-
+    
 }
 /*-------------boton-dia-noche-----------------*/
 #color-toggle-btn {
@@ -267,10 +277,16 @@ h5{
     color: var(--text-color);
     margin-right: auto;
     transition: var(--transition);
+    display: inline-flex;
+    gap: 0.5rem;
+}
+.logo h3{
+    font-size: 2rem;
+    transition: var(--transition);
 }
 .logo:hover{
     transform: scale(1.1);
-
+    
 }
 .navbar{
     display: flex;
@@ -294,7 +310,7 @@ h5{
     border-bottom: 0.19rem solid var(--primary-color);
     text-shadow: 0 0 0.63rem var(--primary-color);
     transform: scale(1.2);
-
+    
 }
 .btn-menu{
     display: none;
@@ -317,12 +333,22 @@ h5{
 /*------------------------------*/
 
 .sobremi{
-
     box-sizing: border-box;
     padding-top: 7rem;
     padding-bottom: 7rem;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.container-principal-sobremi{
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 90%;
 }
 .descripcion-sobremi{
     box-sizing: border-box;
@@ -334,8 +360,15 @@ h5{
     align-items: center;
     justify-content: center;
 }
+.container-texto-sobremi{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
 .texto-sobremi{
-    max-width: 75%;
+    width: 75%;
 }
 .btn-principal{
     margin: 1.25rem 1.25rem 0 0;
@@ -354,6 +387,7 @@ h5{
     opacity: 1;
     transform: translateY(0);
 }
+
 /*----------------------------------------------------------------*/
 .mostrar-habilidades {
     padding-top: 7rem;
@@ -377,9 +411,9 @@ h5{
     width: 30%;
 }
 .texto-porque-contratarme{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
     width: 85%;
     min-width: 280px;
 }
@@ -399,8 +433,8 @@ h5{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px;
-    font-weight: 600;
+    padding: 12px;  
+    font-weight: 600; 
     border-radius: 5px;
     transition: var(--transition);
     cursor: pointer;
@@ -439,8 +473,8 @@ h5{
     max-height: 40rem;
     overflow: auto;
     grid-template-columns: repeat(2, 1fr);
-
-
+    
+    
 }
 .info-experiencia::-webkit-scrollbar {
     width: 0.7rem;
@@ -512,7 +546,7 @@ h5{
     .conGeneral{
         grid-template-columns: repeat(1, 1fr);
     }
-
+    
 }
 
 @media (max-width: 700px) {
@@ -527,11 +561,11 @@ h5{
     }
     .texto-porque-contratarme{
         width: 95%;
-
+        
     }.pantalla-cambiante{
-         width: 95%;
-     }
-
+        width: 95%;
+    }
+    
 }
 
 /*---------------------------------------------------*/
@@ -542,7 +576,7 @@ h5{
     flex-direction: column;
     justify-content:center;
     align-items: center;
-
+    
 }
 
 .container-targetas h3{
@@ -581,7 +615,7 @@ h5{
 .targeta-servicio i{
     display: flex;
     justify-content: left;
-
+    
     font-size: 45px;
 }
 .targeta-servicio ul{
@@ -618,9 +652,9 @@ h5{
     padding: 30px;
     border-radius: 20px;
     gap: 5px;
-
+    
     border: 2px solid var(--primary-color);
-
+    
 }
 
 
@@ -640,7 +674,6 @@ h5{
 .mostrar.active{
     display: block;
 }
-
 
 
 
@@ -691,15 +724,15 @@ h5{
     flex-direction: row;
     justify-content: space-between;
     align-items:start;
-
+    
 }
 .footer-menu{
     padding: 2.5rem ;
-
+    
 }
 .footer-contacto{
     padding: 2.5rem;
-
+    
 }
 .redes-footer{
     padding: 2.5rem;
@@ -707,7 +740,7 @@ h5{
 .lista {
     display: flex;
     flex-direction: column;
-
+    
 }
 .lista li{
     display: inline-block;
@@ -747,7 +780,7 @@ h5{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     background-color: var(--background-color);
 }
 .copyright{
@@ -771,11 +804,11 @@ h5{
     }
 }
 @media(max-width:1070px){
-
+    
     .descripcion-sobremi, .foto, .descripcion{
         width: 100%;
     }
-
+    
 }
 @media (max-width: 1000px) {
     .texto-footer{
@@ -805,9 +838,9 @@ h5{
         border-left: 2px solid var(--primary-color);
         border-bottom: 2px solid var(--primary-color);
         border-right: 2px solid var(--primary-color);
-        border-bottom-left-radius: 2rem;
-        border-bottom-right-radius: 2rem;
-        display: none;
+         border-bottom-left-radius: 2rem;
+         border-bottom-right-radius: 2rem;
+         display: none;
     }
     .navbar ul{
         width: 100%;
@@ -823,17 +856,17 @@ h5{
     }
 
     .navbar.show {
-        display: flex;
-        max-height: 500px;
+      display: flex;
+      max-height: 500px; 
     }
     .targetas-sobremi{
         grid-template-columns: repeat(1, 1fr);
     }
     .navbar ul li a:hover{
-        color: var(--primary-color);
-        border-bottom: 0.19rem solid var(--primary-color);
-        text-shadow: 0 0 0.63rem var(--primary-color);
-        transform: scale(1.08);
+    color: var(--primary-color);
+    border-bottom: 0.19rem solid var(--primary-color);
+    text-shadow: 0 0 0.63rem var(--primary-color);
+    transform: scale(1.08);
     }
 }
 
@@ -861,13 +894,13 @@ h5{
     .texto-footer{
         width: auto;
     }
-
+     
 }
 
 @media(max-width:476px){
     .celdas-tabla tr td{
         display: flex;
-    }
+    } 
     .btn-sobremi-descripcion{
         display: flex;
         align-items: center;
@@ -888,4 +921,61 @@ h5{
     .logo{
         font-size: 20px;
     }
+    .logo h3{
+        font-size: 20px;
+    }
+}
+
+.tabla-responsive {
+    display: flex;
+    width: 75%;
+    flex-wrap: wrap;
+   gap: 0.5rem;
+}
+.fila {
+    gap: 0.5rem;
+    display: flex;
+    width: 100%; /* Cada fila ocupa el 100% del ancho */
+}
+.celda {
+    flex: 1; /* Cada celda ocupa el mismo espacio */
+    padding: 0.5rem 0;
+    border-bottom: 1px solid #e4e4e4;
+    box-sizing: border-box; /* Incluye padding y border en el ancho total */
+}
+/* Media query para pantallas pequeñas */
+@media (max-width: 600px) {
+    .fila {
+        flex-direction: column; /* Cambia a columna en pantallas pequeñas */
+    }
+}
+
+
+.styleFooter-contacto{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    
+    padding-top: 0.5rem;
+}
+.styleFooter-contacto .contact-box{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    font-size: 0.9rem;
+    gap: 0.8rem;
+}
+.styleFooter-contacto .contact-title{
+    display: none;
+}
+.style1-contacto .contact-box i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--secundary-background-color);
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
 }
