--- a/src/main/resources/templates/sobremi.html
+++ b/src/main/resources/templates/sobremi.html
@@ -32,10 +32,10 @@
             
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/index">Inicio</a></li>
                     <li><a href="#sobremi">Sobre mí</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="/proyectos">Proyectos</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
                 </ul>   
             </nav>
         </div>        
