formulario de contacto.html completo
TODO: conectar con la bd, variables listas, controlador y entity funcional

--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
@@ -13,7 +12,7 @@
   <title>Andres Garza</title>
 </head>
 <body>
-<!-------WAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA----->
+
 <div class="container-color-botones">
   <a class="boton-personalizacion-color" aria-expanded="false" aria-controls="menu-colores" title="Abrir selector de colores"><i class="fa-solid fa-pen" ></i></a>
   <div class="menu-desplegable-colores" id="menu-colores" role="menu" aria-hidden="true" tabindex="-1">
@@ -88,19 +87,19 @@
     <div class="container-formulario">
       <div class="fondo-formulario">
         <h3 class="texto-ascendente-sobremi">Enviame un <span>correo</span></h3>
-        <form id="form" action="">
+        <form method="post" id="form" th:action="@{/registrar}" th:object="${contacto}">
           <div class="input-grupo">
             <div class="input-caja">
-              <input type="text" placeholder="Nombre Completo" name="nombre" class="texto-ascendente-sobremi" required>
-              <input type="email" placeholder="Correo Electronico" name="correo-electronico" class="texto-ascendente-sobremi" required>
+              <input type="text" placeholder="Nombre Completo" name="nombre" class="texto-ascendente-sobremi" th:field="*{nombre}" required="required">
+              <input type="email" placeholder="Correo Electronico" name="correo-electronico" class="texto-ascendente-sobremi" th:field="*{correo}" required="required">
             </div>
             <div class="input-caja">
-              <input type="number" placeholder="Numero de celular" name="celular" class="texto-ascendente-sobremi"  required>
-              <input type="text" placeholder="Asunto" name="asunto" class="texto-ascendente-sobremi"  required>
+              <input type="number" placeholder="Numero de celular" name="celular" class="texto-ascendente-sobremi"  th:field="*{celular}" required="required">
+              <input type="text" placeholder="Asunto" name="asunto" class="texto-ascendente-sobremi"  th:field="*{asunto}"required="required">
             </div>
           </div>
           <div class="input-grupo-2">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje aqui>" class="texto-ascendente-sobremi"  required></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje aqui>" class="texto-ascendente-sobremi"  th:field="*{mensaje}" required="required"></textarea>
             <div class="texto-ascendente-sobremi">
               <input id="button-form" type="submit" value="Send Message" class="btn-general btn-color btn-enviar ">
             </div>
