--- a/src/main/resources/templates/acceso-denegado.html
+++ b/src/main/resources/templates/acceso-denegado.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>NO TIENES ACCESO</h1>
+<nav class="navbar">
+    <ul>
+        <li><a href="/index">Volver al inicio</a></li>
+    </ul>
+</nav>
 </body>
 </html>
