--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -228,7 +228,7 @@
                 <p class="copyright">
                 © Andres Garza | Todos los derechos reservados.
                 </p>
-                <a href="editor.html" class="btn-editar"><i class="fa-solid fa-gear"></i></a>
+                <a href="/editor" class="btn-editar"><i class="fa-solid fa-gear"></i></a>
             </div>
         </div>
     </footer>
