--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,15 +55,15 @@
         -->
         <div class="container-header">
             
-            <a href="index.html" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
+            <a href="/index" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
             
             <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
             <nav class="navbar">
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="sobremi.html">Sobre mí</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="/sobremi">Sobre mí</a></li>
+                    <li><a href="/proyectos">Proyectos</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
                 </ul>   
             </nav>
         </div>        
@@ -112,7 +112,7 @@
                         <br>
                         <p class="texto-ascendente-sobremi descripcion-display">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi illum fugit voluptatibus quidem quas quisquam suscipit deleniti ad repellat sapiente maiores doloremque eaque distinctio, quia eos aperiam ratione iste voluptatum.</p>
                         <div class="texto-ascendente-sobremi">
-                            <a href="sobremi.html" class="btn-general btn-color btn-sobremi">Leer más</a>
+                            <a href="/sobremi" class="btn-general btn-color btn-sobremi">Leer más</a>
                         </div>
                         
                     </div>
@@ -155,7 +155,7 @@
                         </div>
                 </div>
             </div>
-            <div class="container-ver-mas anima-proyec"><a href="proyectos.html" class="ver-mas">Más proyectos<i class="fa-solid fa-arrow-right"></i></a>
+            <div class="container-ver-mas anima-proyec"><a href="/proyectos" class="ver-mas">Más proyectos<i class="fa-solid fa-arrow-right"></i></a>
             </div>
             
             
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="btns texto-ascendente-contacto">
-                <a href="contacto.html" class="btn-general btn-color btn-contacto ">Contactame</a>
+                <a href="/contacto" class="btn-general btn-color btn-contacto ">Contactame</a>
             </div>
             
         </section> 
