--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,9 +61,9 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="/sobremi">Sobre mí</a></li>
-                    <li><a href="/proyectos">Proyectos</a></li>
-                    <li><a href="/contacto">Contacto</a></li>
+                <li><a href="/sobremi">Sobre mí</a></li>
+                <li><a href="/proyectos">Proyectos</a></li>
+                <li><a th:href="@{/contacto}">Contacto</a></li>
                 </ul>   
             </nav>
         </div>        
