--- a/src/main/resources/templates/sobremi.html
+++ b/src/main/resources/templates/sobremi.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
-<html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-sobremi.css">
@@ -28,15 +27,15 @@
 </button>
     <header>
         <div class="container-header">
-            <a href="index.html" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
+            <a href="/index" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
             <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
             
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#sobremi">Sobre mí</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="/index">Inicio</a></li>
+                    <li><a href="/sobremi">Sobre mí</a></li>
+                    <li><a href="/proyectos">Proyectos</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
                 </ul>   
             </nav>
         </div>        
@@ -92,7 +91,7 @@
                     </div>
                         <div class="btns texto-ascendente-principal">
                             <a href="#" class="open-cv btn-general btn-color btn-principal"> Descargar CV</a>
-                            <a href="contacto.html" class="btn-general btn-oscuro btn-principal"> Contactar</a>
+                            <a href="/contacto" class="btn-general btn-oscuro btn-principal"> Contactar</a>
                         </div>
                     
                 </div>
